# manga

./: a.out  baka.py  black_page.py  black_page.txt  black_page_frame_detect.py  confirm_shortest.py  frame_detect.py  frame_detect1.py  frame_separation.hpp  frame_separation.py  get_pageinfo_from_xml.py  half_cut.py  koma.py  koma_junban.py  lsd.py  lsd1.py  lsd_seiri.py  main.py  memo.txt  modules.py  requirement.txt  shortest_frame.txt  speechballoon_separation.py  speechballoon_test.py  test  test.cpp  test.py  test1.py  test2.py
black_annotations/: aisazunihairarenai_013のコピー.jpg_0.json  (+27 more)
motioncomicGenerator/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
motioncomicGenerator/CMakeScripts/: ReRunCMake.make
motioncomicGenerator/Debug/: main
motioncomicGenerator/main.build/Debug/ZERO_CHECK.build/: Script-B6137CF23DE3C99A5162C57A.sh
motioncomicGenerator/main.xcodeproj/: project.pbxproj
motioncomicGenerator/main.xcodeproj/project.xcworkspace/xcuserdata/tanakakaito.xcuserdatad/: UserInterfaceState.xcuserstate
motioncomicGenerator/main.xcodeproj/project.xcworkspace/xcuserdata/x20047xx.xcuserdatad/: UserInterfaceState.xcuserstate
motioncomicGenerator/main.xcodeproj/xcuserdata/tanakakaito.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
motioncomicGenerator/main.xcodeproj/xcuserdata/tanakakaito.xcuserdatad/xcschemes/: xcschememanagement.plist
motioncomicGenerator/main.xcodeproj/xcuserdata/x20047xx.xcuserdatad/xcschemes/: xcschememanagement.plist
motioncomicGenerator/src/: a.out  frame_separation.cpp  main.cpp  speechballoon_separation.hpp
(+38 files in other folders)
